--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,25 @@
 <body>
     <div class="wrapper">
         <header class="header">
-
+            <p><img src="./img/header_top.jpg" alt=""></p>
+            <div>
+                <dl>
+                    <dt><img src="./img/header_1.jpg" alt=""></dt>
+                    <dd>全职高手</dd>
+                </dl>
+                <dl>
+                    <dt><img src="./img/header_2.jpg" alt=""></dt>
+                    <dd>活动</dd>
+                </dl>
+                <dl>
+                    <dt><img src="./img/header_3.jpg" alt=""></dt>
+                    <dd>广播剧</dd>
+                </dl>
+                <dl>
+                    <dt><img src="./img/header_4.jpg" alt=""></dt>
+                    <dd>精品周更</dd>
+                </dl>
+            </div>
         </header>
         <main class="main">
             <div class="top">
