--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,26 @@
             </div>
         </main>
         <footer class="footer">
+            <dl>
+                <dt><img src="img/1.jpg" alt=""></dt>
+                <dd>首页</dd>
+            </dl>
+            <dl>
+                <dt><img src="img/2.jpg" alt=""></dt>
+                <dd>我听</dd>
+            </dl>
+            <dl>
+                <dt><img src="img/3.jpg" alt=""></dt>
 
+            </dl>
+            <dl>
+                <dt><img src="img/4.jpg" alt=""></dt>
+                <dd>发现</dd>
+            </dl>
+            <dl>
+                <dt><img src="img/5.jpg" alt=""></dt>
+                <dd>我的</dd>
+            </dl>
         </footer>
     </div>
     <script src="./js/index.js"></script>
